--- a/src/app/medium-button/medium-button.component.html
+++ b/src/app/medium-button/medium-button.component.html
@@ -1,5 +1,13 @@
-<button (click)="emitBoxClick(+number.key)" class="medium-button"  *ngFor="let number of numberButtons | keyvalue  ">
-    <div  class="medium-button__number" >
-       {{ number.value }}
-    </div>
+<button (click)="emitBoxClick(+numberAndOperations.key)" class="medium-button item{{+numberAndOperations.key}}"  *ngFor="let numberAndOperations of numberAndOperationButtons | keyvalue  ">
+    <div  class="medium-button__number" *ngIf="+numberAndOperations.key == 0" (click) = 'emptyBox()'>
+        {{ numberAndOperations.value }}       
+     </div>
+     <div  class="medium-button__number" *ngIf="+numberAndOperations.key == 5" (click) = 'resolveOperation()'>
+        {{ numberAndOperations.value }}       
+     </div>
+    <div  class="medium-button__number" *ngIf="+numberAndOperations.key != 0 && +numberAndOperations.key != 5 ">
+        {{ numberAndOperations.value }}       
+     </div>
+
+     
 </button>
