--- a/src/app/medium-button/medium-button.component.scss
+++ b/src/app/medium-button/medium-button.component.scss
@@ -1,9 +1,10 @@
-:host{
+:host {
     display: grid;
-    grid-template-columns: auto auto auto;
-    padding: 1rem;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 10px;
+    padding: 10px;
     width: 100%;
-    height: 75%;
-    grid-column-gap: 1rem;
-    grid-row-gap: 1rem;
+    height: 70%;
+    
+    
 }
