--- a/src/assets/styles/components/_calculator.scss
+++ b/src/assets/styles/components/_calculator.scss
@@ -10,6 +10,7 @@
         border-radius: 3rem;
         width: 20%;
         height: 70%;
+        min-width: 25rem;
         display: flex;
         align-items: flex-start;
         justify-content: flex-start;
