--- a/src/assets/styles/components/_medium-button.scss
+++ b/src/assets/styles/components/_medium-button.scss
@@ -1,18 +1,26 @@
 .medium-button{
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    background-color: #0452AD ;
-    border-radius: 1.2rem;
-   
-    
-    &__number{
-        color: aliceblue;
-        font-size: 2.5rem;
-        font-weight: bold;
-        
+        background-color: midnightblue;
+        border-radius: 20%;
+        //position: relative;
+        &__number {
+            color: aliceblue;
+            font-size: 2.5rem;
+            font-weight: bold;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;          //position: absolute;
+            //top: 30%
+        }
+
+}
+.item {
+    &5 {
+        grid-area: 4 / 4 / 6 / 4;
+    }
+    &0 {
+        grid-column:4;
+       
     }
 }
